# MapReduce

./: .gitignore  GenerateUnixMake.sh  GenerateVS11.bat  GenerateXCode.sh  LICENSE  MapReduce.sln
LargeTextGenerator/: LargeTextGenerator.csproj  Program.cs
LargeTextGenerator/Properties/: AssemblyInfo.cs
MapReduce/: DirectoryLoaderSource.h  FileLoaderSource.h  Job.h  JobScheduler.h  Main.cpp  MapReduce.vcxproj  MapReduce.vcxproj.filters  MapTaskRunner.h  ReduceTaskRunner.h  SelectFirstReducer.h  StackAllocator.h  StdMapBuffer.h  StdMapDrain.h  StdMapSource.h  StdMapVectorBuffer.h  ThreadedJobScheduler.h  stdafx.h
src/: CMakeLists.txt  Job.h  Main.cpp  stdafx.h
src/DataBuffer/: StdMapVectorBuffer.h
src/DataDrain/: FileDrain.h  StdMapDrain.h
src/MapReduce/: Job.h  JobScheduler.h  ThreadedJobScheduler.h
src/MapReduce/DataBuffer/: StdMapVectorBuffer.h
src/MapReduce/DataDrain/: StdMapDrain.h
src/MapReduce/DataSource/: FileLoaderSource.h  StdMapSource.h
src/MapReduce/Reducers/: SelectFirstReducer.h
src/MapReduce/Runners/: PerCoreJobScheduler.h
src/Runners/: JobRunStatistics.h  JobScheduler.h  PerTaskJobScheduler.h
src/Threading/: LockstepTaskRunner.h
test_data/: VeryShortText.txt
